# QHOT

./: .gitignore  CHANGELOG.md  CLAUDE.md  PyFab.ui  QHOT.ui  README.md  TODO.md  __init__.py  pyfab.py  pyproject.toml  qhot.py
.github/workflows/: publish.yml  tests.yml
docs/: architecture.rst  conf.py
docs/api/: holograms.rst  lib.rst  traps.rst
help/: cghtab.html  helptab.html  index.html  slmtab.html  traphowto.html
lib/: QFabScreen.py  QHOTScreen.py  QSLM.py  QSLMWidget.py  QSaveFile.py  __init__.py  chooser.py  letterSymbol.py
lib/holograms/: CGH.py  QCGHTree.py  TorchCGH.py  cupyCGH.py
lib/tasks/: QTask.py  QTaskManager.py  QTaskManagerWidget.py  QTaskTree.py  QueueMenu.py
lib/traps/: QTrap.py  QTrapGroup.py  QTrapMenu.py  QTrapOverlay.py  QTrapWidget.py  QTrappingPattern.py  __init__.py  commands.py
tasks/: AddTweezer.py  Delay.py  MoveTraps.py  README  Record.py  StopRecording.py  __init__.py
tests/: test_cgh.py  test_chooser.py  test_commands.py  test_delay.py  test_movetraps.py  test_qcghtree.py  test_qfabscreen.py  test_qhotscreen.py  test_qletterarray.py  test_qringtrap.py  test_qsavefile.py  test_qslm.py  test_qslmwidget.py  test_qtask.py  test_qtaskmanager.py  test_qtaskmanagerwidget.py  test_qtextarray.py  test_qtrap.py  test_qtrap.py~  test_qtraparray.py  test_qtrapgroup.py  test_qtrapgroup.py~  test_qtrapmenu.py  test_qtrapoverlay.py  test_qtrapoverlay.py~  test_qtrapwidget.py  test_qvortex.py
traps/: QLetterArray.py  QRingTrap.py  QTextArray.py  QTrapArray.py  QTweezer.py  QVortex.py  README  __init__.py
