[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "QFab"
version = "0.1.0"
description = "Holographic optical trapping instrument control"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "David G. Grier", email = "david.grier@nyu.edu" },
]
keywords = ["holographic optical trapping", "SLM", "CGH", "optics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pyqtgraph>=0.13",
    "tomlkit>=0.11",
    "PyQt5>=5.15",
    "QVideo>=3.2.3",
]

[project.urls]
Homepage = "https://github.com/davidgrier/QFab"
Repository = "https://github.com/davidgrier/QFab"
Issues = "https://github.com/davidgrier/QFab/issues"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]
docs = ["pydata-sphinx-theme", "sphinx", "sphinx-autodoc-typehints"]

[project.scripts]
pyfab = "QFab.pyfab:main"

[tool.setuptools.packages.find]
where = [".."]
include = ["QFab*"]

[tool.setuptools.package-data]
QFab = ["PyFab.ui", "help/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["QFab"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/old/*",
    "*/.ipynb_checkpoints/*",
    "*/holograms/cupyCGH.py",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "@classmethod",
]
